--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -45,7 +45,7 @@
 			</view>
 			
 		</view>
-	    <view class='quantity'>
+	    <view class='quantity' wx:if="{{isnum}}">
 	    	<view class='purchase_quantity'>购买数量</view>
 			<view class='select_quantity'>
 			   <view class='subtract' bindtap="bindMinus">-</view>
