--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,2 +1,40 @@
-<!--pages/order/order.wxml-->
-<text>pages/order/order.wxml</text>
+<view class="all" style='height:{{height}}px;'>
+ <view class='title'>
+    <view class='title_list'>全部</view>
+    <view class='title_list'>待付款</view>
+    <view class='title_list'>待发货</view>
+    <view class='title_list'>待收货</view>
+    <view class='title_list'>待评价</view>
+ </view>
+ <view class='content'>
+   <view class='order_list'>
+     <view class='box_list_one'>
+       <view>订单编号：201809145337 </view>
+       <view class='static'>等待买家付款</view>
+     </view>
+     <view class='box_list_two'>
+       <view class='img'> <image src='img/u1222.png' mode='aspectFill'></image> </view>
+       <view class='good_infor'>
+       <view class='good_name'>商品名称</view>
+       <view class='good_selling'>商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品……</view>
+       <view class='good_monye'>
+          <view class='good_uite'>
+              <image src='img/u182.png' class='user_img'></image>
+              <text class='uite'>￥90.0/片</text>
+          </view>
+          <view class='num'>x1</view>
+       </view>
+       </view>
+     </view>
+     <view class='box_list_three'>
+       <view><text>共1件商品</text><text>合计：￥90.0</text> </view>
+     </view>
+       <view class='box_list_four'>
+       <view>
+          <view class='cancel'>取消订单</view>
+          <view class='payment'>付款</view>
+       </view>
+     </view>
+   </view>
+ </view>
+</view>
