--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -23,7 +23,7 @@
 	<view class='titles'>
 		购物清单
 	</view>
-	<view wx:for="{{goods}}">
+	<view wx:for="{{goods}}" class='good_list'>
 		<view class='order-goods-info'>
 			<view class='order-goods-img'>
 				<image src='img/u852.png' mode="scaleToFill"></image>
@@ -40,7 +40,7 @@
 						<view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}"> ￥{{item.goods_info.goods_new_money}}/片</view>
 						<view class='unit-price-p text_red' wx:else> ￥{{item.special_info.price}}/片</view>
 					</view>
-					<view class='quantity-p text_red'>×1</view>
+					<view class='quantity-p text_red'>×{{item.number}}</view>
 				</view>
 			</view>
 			
