--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -37,8 +37,8 @@
 							<image src='img/u216.png' mode="scaleToFill"></image>
 						</view>
 
-						<view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}"> ￥{{item.goods_info.goods_new_money}}/片</view>
-						<view class='unit-price-p text_red' wx:else> ￥{{item.special_info.price}}/片</view>
+						<view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}"> ￥{{item.grade_price}}/片</view>
+						<view class='unit-price-p text_red' wx:else> ￥{{item.grade_price}}/片</view>
 					</view>
 					<view class='quantity-p text_red'>×{{item.number}}</view>
 				</view>
