--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -46,26 +46,24 @@
       </view>
       <view class='goods-content'>
             <view class="weui-grids">
-        
-        <view class="weui-grid" wx:for="{{routers}}" wx:key="name">
-                <view class='weui-grid__bg'>
-                    <view class="weui-grid__icon">
-                        <image src="{{url}}{{item.goods_show_image}}" mode="scaleToFill" />
-                    </view>
-                    <text class="weui-grid_name">{{item.goods_name}}</text>
-                     <text class="weui-grid_kuchun">库存123片</text>
-                     <view class='selling_point'>{{item.goods_selling}}
-                     </view>
-                     <view class='price'>
-                          <view class='price_img'><image src='img/u182.png'></image></view>
-                          
-                          <text class="price_text" wx:if="{{item.goods_standard==0}}">￥{{item.goods_new_money}}</text>
-                           <text class="price_text" wx:else>￥{{item.min_price}}-￥{{item.max_price}}</text>
-                           <text class="price_line">{{item.name}}</text>
-                     </view>
+                    <view class="weui-grid" wx:for="{{routers}}" wx:key="name" bindtap="go_gooddetail"  data-id="{{item.id}}">
+                            <view class='weui-grid__bg'>
+                                <view class="weui-grid__icon">
+                                    <image src="{{url}}{{item.goods_show_image}}" mode="scaleToFill" />
+                                </view>
+                                <text class="weui-grid_name">{{item.goods_name}}</text>
+                                <text class="weui-grid_kuchun">库存123片</text>
+                                <view class='selling_point'>{{item.goods_selling}}
+                                </view>
+                                <view class='price'>
+                                    <view class='price_img'><image src='img/u182.png'></image></view>
+                                    <text class="price_text" wx:if="{{item.goods_standard==0}}">￥{{item.goods_new_money}}</text>
+                                    <text class="price_text" wx:else>￥{{item.min_price}}-￥{{item.max_price}}</text>
+                                    <text class="price_line">{{item.name}}</text>
+                                </view>
 
-                </view>
-        </view>
+                            </view>
+                    </view>
     </view>
       </view>
   
