--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -159,11 +159,11 @@
 	<view class='sundry'>
 		<view class='sundry-li' style='border-bottom: solid 1rpx #E4E4E4;'>
 			<view style='font-size:30rpx;'>订单金额</view>
-			<view>应付<text style='color:#FF7E4A;padding-left:20rpx;'>839元</text></view>
+			<view>应付<text style='color:#FF7E4A;padding-left:20rpx;'>{{all_money}}元</text></view>
 		</view>
 		<view class='sundry-li' style=' border-bottom: solid 1rpx #E4E4E4;'>
 			<view>商品总价</view>
-			<view><text style='color:#FF7E4A; '>839元</text></view>
+			<view><text style='color:#FF7E4A;'>{{all_money}}元</text></view>
 		</view>
 		<view class='sundry-li'>
 			<view class='text_red'>优惠券</view>
