--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -53,7 +53,7 @@
 	
 	.goods_cont {
 		background: #fff;
-		padding: 16rpx;
+		padding: 16rpx 16rpx 0 16rpx;
 	}
 	
 	.good_name {
@@ -82,7 +82,7 @@
 	.other_info {
     width: 100%;
 		display: flex;
-		height: 94rpx;
+		height: 60rpx;
 		align-items: center;
      border-top: solid #DDDDDD 1px;
 	}
@@ -210,7 +210,6 @@
   .trade{
     height: 80rpx;
     width: 474rpx;
-    border-radius:67rpx;
     overflow: hidden; 
     display: flex;
     align-items: center;
@@ -265,11 +264,17 @@
     z-index: 999999;
   }
   .select-goods-img{
-    width: 260rpx;
-    position: absolute;
-    top: -100rpx;
-    left: 30rpx;
-    z-index: 999999;
+    width:260rpx;
+    position:absolute;
+    top:-100rpx;
+    left:30rpx;
+    z-index:999999;
+    box-sizing:border-box;
+    padding:13rpx;
+    border:#EDEDED solid 1rpx;
+    background:#fff;
+    border-radius:15rpx;
+    
   }
   .select-goods-wrap{
     position: relative;
