--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,7 +1,18 @@
 <view class="all">
 <view class="list">
      <view class="list_left">官方网址</view>
-     <view clas="list_right">https://hao.360.cn/?wd_xp1</view>
+     <view class="list_right">https://hao.360.cn/?wd_xp1</view>
 </view>
-   
+   <view class="list">
+     <view class="list_left">   官方邮箱</view>
+     <view class="list_right">hao.360.cn/?wd_xp1</view>
+</view>
+<view class="list">
+     <view class="list_left">联系电话</view>
+     <view class="list_right">010-776666666</view>
+</view>
+<view class="list">
+     <view class="list_left">合作微信</view>
+     <view class="list_right">13938388383</view>
+</view>
 </view>
