--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -18,7 +18,7 @@
         </view>
         <view class='list_a list'>
           <view class='ico_img'><image  src='img/u5005.png' ></image></view>
-          <view class='list_content listc_content' ><text style='color:#5E5E5E'>活动上限{{information.participats}}人</text><text>已报名0人</text></view>
+          <view class='list_content listc_content' ><text style='color:#5E5E5E'>活动上限</text>{{information.participats}}<text style='color:#5E5E5E'>人</text><text class="padding">已报名0人</text></view>
         </view>
         <view class='list_a list'>
           <view class='ico_img'><image  src='img/u5017.png' ></image></view>
