--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,7 +6,7 @@
           <view class="nfc"><image  src="img/u270.png"> </image> </view>
           <view class='fangwei' >溯源</view>
       </view>
-      <image src="img/seach.png"  class="seach_img"/>
+      <image src="img/seach.png"  class="seach_img" mode="widthFix" />
       <input type='text' class='seach' placeholder="请输入"></input>
        <view style='float: left;'>
           <view class="ma"><image  src="img/u180.png"> </image> </view>
