--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -58,8 +58,8 @@ overflow:hidden;
   align-items: center;
 }
 
-.listc_content text{
-margin-right: 20rpx;
+.listc_content .padding{
+margin-left: 20rpx;
 }
 .listd_content{
   vertical-align: 10rpx;
@@ -147,10 +147,11 @@ margin-left: 80rpx;
 .buttom_nav{
 display:flex;
 position:fixed;
+align-items: center;
 bottom:0;
 z-index:9999;
 background:#fff;
-padding-bottom: 10rpx;
+width: 750rpx;
 
 }
 .star{
@@ -186,13 +187,14 @@ overflow:hidden;
 }
 .buttons{
 width: 170rpx;
+text-align: center;
+line-height: 60rpx;
 height: 60rpx;
 color: #fff;
 background: #FF6700;
-border-radius: 30rpx;
 font-size: 26rpx;
 border: 0;
-margin-left: 42rpx;
+margin-left: 52rpx;
 }
 .input_null{
 color: #C9C9C9;
