--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -64,13 +64,13 @@
       </view>
       <view class='right'>
         <view style='align-items:center;height:20px;'>
-          <image style='width:20px;height:20px;padding-left:25px;' src='http://teahouse.siring.com.cn/upload/20181129/f95ab6bf449933fe54fbcce047b87c3d.png'></image>
+          <image style='width:20px;height:20px;padding-left:25px;' src='http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png'></image>
         </view>
       </view>
       </view>
   </view>
      <view  class='list-content' >
-   <view wx:for='{{lista}}' class='ifor_list' >
+   <view wx:for='{{lista}}' class='ifor_list'   data-url="{{item.src}}" bindtap="mycollect">
       <view class='left'>
         <view class='list-ico'>
           <image src='{{item.url}}'></image>
@@ -81,7 +81,7 @@
       </view>
       <view class='right'>
         <view style='align-items:center;height:20px;'>
-          <image style='width:20px;height:20px;padding-left:25px;' src='http://teahouse.siring.com.cn/upload/20181129/f95ab6bf449933fe54fbcce047b87c3d.png'></image>
+          <image style='width:20px;height:20px;padding-left:25px;' src='http://teahouse.siring.com.cn//upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png'></image>
         </view>
       </view>
       </view>
