--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -44,7 +44,7 @@
       <view class="order_title_more" bindtap="go_order"> 查看全部订单></view>
       </view>
      <view class='order_content'>
-     <view wx:for="{{order_nav}}" class='nav_list'>
+     <view wx:for="{{order_nav}}" class='nav_list' bindtap="go_order">
        <view class='nav_img'><image src='{{item.src}}'></image></view>
        <view>{{item.text}}</view>
      </view >
