--- a/pages/account/account.wxml
+++ b/pages/account/account.wxml
@@ -33,15 +33,15 @@
                 <image src="img/u9483.png"  class="ico" />
                 <text class="text">账单</text>
               </view>
-                <view class="box"  bindtap="go_identity_authentication"  data-src="">
+                <view class="box"  bindtap="go"  data-src="">
                 <image src="img/u9499.png"  class="ico" />
                 <text class="text">积分</text>
               </view>
-                  <view class="box"  bindtap="go_identity_authentication"  data-src="">
+                  <view class="box"  bindtap="go"  data-src="../integral_center/integral_center">
                 <image src="img/u9495.png"  class="ico" />
                 <text class="text">积分商城</text>
               </view>
-              <view class="box"  bindtap="go_identity_authentication"   data-src="">
+              <view class="box"  bindtap="go"   data-src="../coupon/coupon">
                 <image src="img/u9517.png"  class="ico" />
                 <text class="text">优惠券</text>
               </view>
