--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -250,9 +250,9 @@ margin-top:28rpx;
 }
  
 .weui-grid__icon {
-  width:344rpx;
-height:344rpx;
-margin:0 auto;
+  width:355rpx;
+  height:355rpx;
+  margin:0 auto;
 
 }
  
@@ -268,6 +268,10 @@ margin:0 auto;
 }
 .price{
   margin-left: 10rpx;
+  margin-top: -8rpx;
+  display:flex;
+  align-items:center;
+
 }
  .price_img{
    float: left;
