--- a/pages/password/password.wxss
+++ b/pages/password/password.wxss
@@ -1,1 +1,11 @@
-/* pages/password/password.wxss */
+input{
+ font-size: 24rpx;
+ padding: 20rpx;
+ border-bottom: solid 1rpx #EFEFEF; 
+}
+.btn-area{
+    margin-top: 100rpx;
+    margin: 40rpx;
+    color: #fff;
+    background: #00BBFF;
+}
